Prevent flickering from irrelevant flex elements

--- a/styles/App.css
+++ b/styles/App.css
@@ -1,8 +1,6 @@
 .App {
   background-color: var(--background-color);
   color: white;
-  display: flex;
-  flex-direction: column;
   height: 100%;
   max-height: 1024px;
   max-width: 780px;
@@ -11,6 +9,11 @@
   user-select: none;
 }
 
-.App > :last-child {
+.App > main {
+  display: flex;
+  flex-direction: column;
+}
+
+.App > main > :last-child {
   flex: 1;
 }
